--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,39 @@
 {
   "version": 2,
   "builds": [
-    { "src": "server.js", "use": "@vercel/node" }
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "**",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "server.js" }
+    {
+      "src": "/products",
+      "dest": "server.js"
+    },
+    {
+      "src": "/signup",
+      "dest": "server.js"
+    },
+    {
+      "src": "/login",
+      "dest": "server.js"
+    },
+    {
+      "src": "/cart(.*)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/favorites(.*)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "$1"
+    }
   ]
 }
