--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -29,7 +33,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "$1"
     }
   ]
 }
