--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URI = mongodb+srv://unknownme7707_db_user:y6Y5XGFVjBhQ7UFH@clusterone.oe9zc1s.mongodb.net/test?retryWrites=true&w=majority
 PORT=3000
+API_URI= window.location.origin
