--- a/vercel.json
+++ b/vercel.json
@@ -1,39 +1,15 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "**",
-      "use": "@vercel/static"
-    }
+    { "src": "server.js", "use": "@vercel/node" },
+    { "src": "**", "use": "@vercel/static" }
   ],
   "routes": [
-    {
-      "src": "/products",
-      "dest": "server.js"
-    },
-    {
-      "src": "/signup",
-      "dest": "server.js"
-    },
-    {
-      "src": "/login",
-      "dest": "server.js"
-    },
-    {
-      "src": "/cart(.*)",
-      "dest": "server.js"
-    },
-    {
-      "src": "/favorites(.*)",
-      "dest": "server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "$1"
-    }
+    { "src": "/products", "dest": "server.js" },
+    { "src": "/signup", "dest": "server.js" },
+    { "src": "/login", "dest": "server.js" },
+    { "src": "/cart(.*)", "dest": "server.js" },
+    { "src": "/favorites(.*)", "dest": "server.js" },
+    { "src": "/(.*)", "dest": "$1" }
   ]
 }
