--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
     { "src": "/products", "dest": "backend/server.js" },
     { "src": "/signup", "dest": "backend/server.js" },
     { "src": "/login", "dest": "backend/server.js" },
-    { "src": "/cart/([^/]+)$", "dest": "backend/server.js" },
-    { "src": "/favorites(.*)", "dest": "backend/server.js" },
+    { "src": "/api/cart(.*)", "dest": "backend/server.js" },
+    { "src": "/api/favorites(.*)", "dest": "backend/server.js" },
     { "src": "/(.*)", "dest": "$1" }
   ]
 }
