--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,10 @@
     { "src": "/products", "dest": "backend/server.js" },
     { "src": "/signup", "dest": "backend/server.js" },
     { "src": "/login", "dest": "backend/server.js" },
+    { "src": "/request-otp", "dest": "backend/server.js" },
+    { "src": "/verify-otp", "dest": "backend/server.js" },
     { "src": "/api/cart(.*)", "dest": "backend/server.js" },
     { "src": "/api/favorites(.*)", "dest": "backend/server.js" },
-    { "src": "/(.*)", "dest": "$1" },
-    { "src": "/request-otp", "dest": "backend/server.js" },
-    { "src": "/verify-otp", "dest": "backend/server.js" }
+    { "src": "/(.*)", "dest": "$1" }
   ]
 }
